# rudsbot

./: .gitignore  Cargo.toml  config_example.yaml
src/: main.rs
src/app/: bot.rs  event_handle.rs  mod.rs
src/app/slash_command/: command.rs  mod.rs
src/app/slash_command/commands/: mod.rs  ping.rs
src/app/slash_command/commands/record/: message.rs  mod.rs  record.rs
