[package]
name = "rusbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
serde = "1.0"
serde_yaml = "0.9"